# snakemake-executor-plugin-slurm-kuhpc

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release-please.yml
docs/: further.md  intro.md
examples/: README.md
examples/basic/: Snakefile
examples/gpu/: Snakefile
examples/mpi/: Snakefile
examples/openmp/: Snakefile
examples/profiles/default/: config.yaml
examples/profiles/gpu/: config.yaml
examples/profiles/long-jobs/: config.yaml
snakemake_executor_plugin_slurm_kuhpc/: __init__.py
tests/: tests.py
