[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "snakemake-executor-plugin-slurm-kuhpc"
version = "0.1.0"
description = ""
authors = [ "Shiori Hironaka <noahluces@gmail.com>",]
readme = "README.md"
repository = "https://github.com/your/plugin"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/executor/slurm-kuhpc.html"

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.17.2"
snakemake-interface-executor-plugins = "^9.2.0"
snakemake-executor-plugin-slurm-jobstep = "^0.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
coverage = "^7.5.4"
pytest = "^8.2.2"
snakemake = "^8.15.0"
